GandCrab/4.0/README.md
Extension(s): 
```
.KRAB
```
Ransom Note(s): 
```
KRAB-DECRYPT.txt
```
```
---= GANDCRAB V4  =--- 

Attention! 
All your files, documents, photos, databases and other important files are encrypted and have the extension: .KRAB 
The only method of recovering files is to purchase an unique private key. Only we can give you this key and only we can recover your files.

The server with your key is in a closed network TOR. You can get there by the following ways:

----------------------------------------------------------------------------------------
| 0. Download Tor browser - https://www.torproject.org/ 
| 1. Install Tor browser 
| 2. Open Tor Browser 
| 3. Open link in TOR browser:   http://gandcrabmfe6mnef.onion/e3186bc5c4ba3647                        
| 4. Follow the instructions on this page 
----------------------------------------------------------------------------------------                    
    
On our page you will see instructions on payment and get the opportunity to decrypt 1 file for free. 

ATTENTION!
IN ORDER TO PREVENT DATA DAMAGE:

* DO NOT MODIFY ENCRYPTED FILES
* DO NOT CHANGE DATA BELOW

---BEGIN GANDCRAB KEY---
GC_KEY
---END GANDCRAB KEY---

---BEGIN PC DATA---
PC_DATA
---END PC DATA---
```
